# web_tool

./: .gitignore  LICENSE  README.md  installer.py  pyproject.toml
icons/: webtool_icon.icns
tests/test_site/: hidden.html  index.html
tests/test_site/games/: games.html
tests/test_site/games/playstation/: ps5.html
tests/test_site/movies/: movies.html
tests/test_site/music/: music.html
tests/test_site/outside/: outside.html
webtool/: main.py
webtool/app/: application.py
webtool/app/tabs/: admin.py  webmapper.py  webscrapper.py
webtool/config/: configs.py
webtool/constants/: constants.py
webtool/styles/: styles.py
webtool/utils/: fileutils.py  loggingutils.py  systemsutil.py  validationutils.py  webutils.py  widgetutils.py
webtool/widget/: CollapsibleFrame.py  Hint.py  ScrollableFrame.py  ScrollableText.py
